kubernetes-manifests/minio/minio-nas-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: minio
  name: minio-nas
  labels:
    app.kubernetes.io/name: minio
    minio.kubernetes.io/tenant: nas
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
      minio.kubernetes.io/tenant: nas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
        minio.kubernetes.io/tenant: nas
    spec:
      containers:
        - name: minio-nas
          image: "minio/minio:RELEASE.2020-01-25T02-50-51Z"
          args:
            - gateway
            - nas
            - /minio/data
          ports:
            - name: http
              containerPort: 9000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/live
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/ready
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
          - name: minio-data
            mountPath: /minio
      nodeSelector:
        "kubernetes.io/arch": "amd64"
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-data-pvc
      dnsConfig:
        options:
        - name: ndots
          value: "1"
