kubernetes-manifests/minio/minio-nas-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: minio
    minio.kubernetes.io/tenant: nas
  name: minio-nas
  namespace: minio
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  selector:
    app.kubernetes.io/name: minio
    minio.kubernetes.io/tenant: nas
